# nexloja

./: .gitignore  README.md  ideias.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
backend/: .env.example  package-lock.json  package.json  seed-dados-teste.js
backend/src/: config.js  database.js  index.js
backend/src/middleware/: auth.js
backend/src/routes/: auth.js  caixa.js  categorias.js  clientes.js  configuracao.js  dashboard.js  estoque.js  produtos.js  relatorios.js  vendas.js
backend/src/utils/: helpers.js
front/: package-lock.json  package.json  vite.config.ts
front/electron/: main.cjs
front/scripts/: embed-icon.cjs
front/src/: main.tsx
front/src/domain/: index.ts
src/: EXEMPLOS_DE_USO.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/layouts/: main-layout.tsx
src/app/providers/: app-providers.tsx
src/app/router/: app-router.tsx  protected-route.tsx
src/app/store/: auth-store.ts  venda-cart-store.ts
src/data/db/: tauri-command.ts
src/data/repositories/: caixa-repository.ts  categoria-repository.ts  cliente-repository.ts  configuracao-loja-repository.ts  dashboard-repository.ts  estoque-repository.ts  produto-repository.ts  relatorio-repository.ts  venda-repository.ts
src/domain/: index.ts
src/domain/entities/: caixa-sessao.ts  cliente.ts  dashboard.ts  item-venda.ts  movimentacao-estoque.ts  produto.ts  relatorio.ts  user-entity.ts  venda.ts
src/services/: api.ts
src/styles/: globals.css
(+195 files in other folders)
