[package]
name = "nexloja"
version = "0.1.0"
description = "Aplicativo desktop de gerenciamento de loja"
authors = ["NexLoja Team"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
tauri = { version = "2.2.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
argon2 = "0.5.3"
rand = "0.8.5"
uuid = { version = "1.11.0", features = ["v4"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
